--- a/src/app/lancamentos-pesquisa/lancamentos-pesquisa.component.html
+++ b/src/app/lancamentos-pesquisa/lancamentos-pesquisa.component.html
@@ -27,15 +27,27 @@
       <p-dataTable [value]="lancamentos" [paginator]="true" [rows]="5" [responsive]="true">
         <p-column field="pessoa" header="Pessoa"></p-column>
         <p-column field="descricao" header="Descricao"></p-column>
-        <p-column field="dataVencimento" header="Vencimento" styleClass="col-data"></p-column>
-        <p-column field="dataPagamento" header="Pagamento" styleClass="col-data"></p-column>
+
+        <p-column field="dataVencimento" header="Vencimento" styleClass="col-data">
+          <ng-template let-lanc="rowData" pTemplate="body">
+            <span>{{ lanc.dataVencimento | date:'dd/MM/y' }}</span>
+          </ng-template>
+        </p-column>
+
+        <p-column field="dataPagamento" header="Pagamento" styleClass="col-data">
+          <ng-template let-lanc="rowData" pTemplate="body">
+            <span> {{ lanc.dataPagamento | date:'dd/MM/y' }}</span>
+          </ng-template>
+        </p-column>
+
         <p-column field="valor" header="Valor" styleClass="col-valor">
           <ng-template let-lanc="rowData" pTemplate="body">
             <span [style.color]="lanc.tipo === 'DESPESA' ? 'red' : 'blue'">
-              {{lanc.valor}}
+              {{lanc.valor | number }}
             </span>
           </ng-template>
         </p-column>
+
         <p-column styleClass="col-acoes">
           <ng-template pTemplate="body">
             <a pButton icon="fa-pencil" pTooltip="Editar" tooltipPosition="top"></a>
