--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
 <app-navbar></app-navbar>
-<app-lancamentos-pesquisa></app-lancamentos-pesquisa>
-<!--app-pessoas-pesquisa></app-pessoas-pesquisa-->
+<app-lancamento-cadastro></app-lancamento-cadastro>
+
+
+<!--
+  <app-pessoas-pesquisa></app-pessoas-pesquisa>
+  <app-lancamentos-pesquisa></app-lancamentos-pesquisa>
+-->
