--- a/src/app/lancamento-cadastro/lancamento-cadastro.component.html
+++ b/src/app/lancamento-cadastro/lancamento-cadastro.component.html
@@ -22,12 +22,22 @@
 
     <div class="ui-g-12 ui-md-9 ui-fluid">
       <label>Descricao</label>
-      <input pInputText type="text">
+      <input pInputText type="text" name="descricao" ngModel #descricao="ngModel"
+      required minlength="5">
+
+      <div *ngIf="descricao.hasError('required') && descricao.dirty" class="ui-message ui-messages-error">
+        Informe uma descricao.
+      </div>
+
+      <div *ngIf="descricao.hasError('minlength') && descricao.dirty" class="ui-message ui-messages-error">
+        Minimo {{ descricao.errors.minlength.requiredLength }} caracteres.
+      </div>
+
     </div>
 
     <div class="ui-g-12 ui-md-3 ui-fluid">
       <label>Valor</label>
-      <input pInputText type="text" placeholder="0,00" currencyMask [options]="{ prefix: '', thousands: '.', decimal: ',', allowNegative: false}">
+      <input pInputText type="text" name="valor" ngModel placeholder="0,00" currencyMask [options]="{ prefix: '', thousands: '.', decimal: ',', allowNegative: false}">
     </div>
 
     <div class="ui-g-12 ui-md-6 ui-fluid">
