--- a/src/app/lancamento-cadastro/lancamento-cadastro.component.html
+++ b/src/app/lancamento-cadastro/lancamento-cadastro.component.html
@@ -25,14 +25,8 @@
       <input pInputText type="text" name="descricao" ngModel #descricao="ngModel"
       required minlength="5">
 
-      <div *ngIf="descricao.hasError('required') && descricao.dirty" class="ui-message ui-messages-error">
-        Informe uma descricao.
-      </div>
-
-      <div *ngIf="descricao.hasError('minlength') && descricao.dirty" class="ui-message ui-messages-error">
-        Minimo {{ descricao.errors.minlength.requiredLength }} caracteres.
-      </div>
-
+      <app-message [control]="descricao" error="required" text="Informe uma descricao."></app-message>
+      <app-message [control]="descricao" error="minlength" text="Minimo {{ descricao.errors?.minlength?.requiredLength }} caracteres."></app-message>
     </div>
 
     <div class="ui-g-12 ui-md-3 ui-fluid">
