--- a/src/app/pessoa-cadastro/pessoa-cadastro.component.html
+++ b/src/app/pessoa-cadastro/pessoa-cadastro.component.html
@@ -8,42 +8,50 @@
 
     <div class="ui-g-12 ui-fluid">
       <label>Nome</label>
-      <input pInputText type="text">
+      <input pInputText type="text" name="nome" ngModel #nome="ngModel" required minlength="5">
+      <app-message [control]="nome" error="required" text="Informe o nome"></app-message>
+      <app-message [control]="nome" error="minlength" text="Minimo de {{ nome.errors?.minlength?.requiredLength }} caracteres."></app-message>
     </div>
 
     <div class="ui-g-12 ui-md-9 ui-fluid">
       <label>Logradouro</label>
-      <input pInputText type="text">
+      <input pInputText type="text" name="logradouro" ngModel #logradouro="ngModel" required>
+      <app-message [control]="logradouro" text="Informe o logradouro" error="required"></app-message>
     </div>
 
     <div class="ui-g-12 ui-md-3 ui-fluid">
       <label>Numero</label>
-      <input pInputText type="text">
+      <input pInputText type="text" name="numero" ngModel #numero="ngModel" required>
+      <app-message [control]="numero" text="Informe o numero" error="required"></app-message>
     </div>
 
     <div class="ui-g-12 ui-md-4 ui-fluid">
       <label>Complemento</label>
-      <input pInputText type="text">
+      <input pInputText type="text" name="complemento" ngModel #complemento="ngModel">
     </div>
 
     <div class="ui-g-12 ui-md-4 ui-fluid">
       <label>Bairro</label>
-      <input pInputText type="text">
+      <input pInputText type="text" name="bairro" ngModel #bairro="ngModel" required>
+      <app-message [control]="bairro" text="Informe o bairro" error="required"></app-message>
     </div>
 
     <div class="ui-g-12 ui-md-4 ui-fluid">
       <label>CEP</label>
-      <p-inputMask mask="99.999-999"></p-inputMask>
+      <p-inputMask mask="99.999-999" name="cep" ngModel #cep="ngModel" required></p-inputMask>
+      <app-message [control]="cep" text="Informe o CEP" error="required"></app-message>
     </div>
 
     <div class="ui-g-12 ui-md-6 ui-fluid">
       <label>Cidade</label>
-      <input pInputText type="text">
+      <input pInputText type="text" name="cidade" ngModel #cidade="ngModel" required>
+      <app-message [control]="cidade" text="Informe uma Cidade" error="required"></app-message>
     </div>
 
     <div class="ui-g-12 ui-md-6 ui-fluid">
       <label>Estado</label>
-      <input pInputText type="text">
+      <input pInputText type="text" name="estado" ngModel #estado="ngModel" required>
+      <app-message [control]="estado" text="Informe o estado" error="required"></app-message>
     </div>
 
     <div class="ui-g-12">
