--- a/src/app/lancamentos/lancamentos-pesquisa/lancamentos-pesquisa.component.html
+++ b/src/app/lancamentos/lancamentos-pesquisa/lancamentos-pesquisa.component.html
@@ -1,25 +1,28 @@
 <div class="container">
   <div class="ui-g">
-    <div class="ui-g-12">
-      <h1>Lancamentos</h1>
-    </div>
+    <form autocomplete="off" (ngSubmit)="pesquisar()">
+      <div class="ui-g-12">
+        <h1>Lancamentos</h1>
+      </div>
 
-    <div class="ui-g-12 ui-fluid">
-      <label>Descricao</label>
-      <input pInputText type="text">
-    </div>
+      <div class="ui-g-12 ui-fluid">
+        <label>Descricao</label>
+        <input pInputText type="text" name="descricao"
+        [(ngModel)]="descricao">
+      </div>
 
-    <div class="ui-g-12">
-      <label style="display: block">Vencimento</label>
-      <input pInputText type="text" style="width: 95px">
+      <div class="ui-g-12">
+        <label style="display: block">Vencimento</label>
+        <input pInputText type="text" style="width: 95px">
 
-      <label>Ate</label>
-      <input pInputText type="text" style="width: 95px">
-    </div>
+        <label>Ate</label>
+        <input pInputText type="text" style="width: 95px">
+      </div>
 
-    <div class="ui-g-12">
-      <button pButton type="submit" label="Pesquisar"></button>
-    </div>
+      <div class="ui-g-12">
+        <button pButton type="submit" label="Pesquisar"></button>
+      </div>
+    </form>
   </div>
 
   <app-lancamentos-grid [lancamentos]="lancamentos"></app-lancamentos-grid>
