--- a/src/app/lancamentos/lancamentos-pesquisa/lancamentos-pesquisa.component.html
+++ b/src/app/lancamentos/lancamentos-pesquisa/lancamentos-pesquisa.component.html
@@ -13,10 +13,12 @@
 
       <div class="ui-g-12">
         <label style="display: block">Vencimento</label>
-        <input pInputText type="text" style="width: 95px">
+        <p-calendar dateFormat="dd/mm/yy" [inputStyle]="{ width: '95px' }"
+          name="dataVencimentoDe" [(ngModel)]="dataVencimentoDe"></p-calendar>
 
         <label>Ate</label>
-        <input pInputText type="text" style="width: 95px">
+        <p-calendar dateFormat="dd/mm/yy" [inputStyle]="{ width: '95px' }"
+          name="dataVencimentoAte" [(ngModel)]="dataVencimentoAte"></p-calendar>
       </div>
 
       <div class="ui-g-12">
