--- a/src/app/lancamentos/lancamentos-pesquisa/lancamentos-pesquisa.component.html
+++ b/src/app/lancamentos/lancamentos-pesquisa/lancamentos-pesquisa.component.html
@@ -29,7 +29,7 @@
 
   <div class="ui-g">
     <div class="ui-g-12">
-      <p-dataTable [value]="lancamentos" [responsive]="true"
+      <p-dataTable #tabela [value]="lancamentos" [responsive]="true"
         [paginator]="true" [rows]="filtro.itensPorPagina"
         [lazy]="true" [totalRecords]="totalRegistros"
         (onLazyLoad)="aoMudarPagina($event)"
@@ -58,9 +58,9 @@
         </p-column>
 
         <p-column styleClass="col-acoes">
-          <ng-template pTemplate="body">
+          <ng-template let-lanc="rowData" pTemplate="body">
             <a pButton icon="fa-pencil" pTooltip="Editar" tooltipPosition="top"></a>
-            <button pButton icon="fa-trash" pTooltip="Excluir" tooltipPosition="top"></button>
+            <button pButton icon="fa-trash" pTooltip="Excluir" (click)="excluir(lanc)" tooltipPosition="top"></button>
           </ng-template>
         </p-column>
       </p-dataTable>
