--- a/src/app/pessoas/pessoas-pesquisa/pessoas-pesquisa.component.html
+++ b/src/app/pessoas/pessoas-pesquisa/pessoas-pesquisa.component.html
@@ -26,7 +26,7 @@
         <p-column field="endereco.estado" header="Estado"></p-column>
         <p-column field="status" header="Status">
           <ng-template let-pess="rowData" pTemplate="body">
-            <span [pTooltip]="!pess.status === true ? 'Ativo' : 'Inativo'">{{ pess.status === true ? 'Ativo' : 'Inativo'}}</span>
+            <a (click)="mudarStatus(pess)" [pTooltip]="!pess.ativo === true ? 'Ativo' : 'Inativo'">{{ pess.ativo === true ? 'Ativo' : 'Inativo' }}</a>
           </ng-template>
         </p-column>
 
