--- a/src/app/lancamentos/lancamento-cadastro/lancamento-cadastro.component.html
+++ b/src/app/lancamentos/lancamento-cadastro/lancamento-cadastro.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <form #lancamentoForm="ngForm" (ngSubmit)="'#'">
+  <form #f="ngForm" #lancamentoForm="ngForm" (ngSubmit)="salvar(f)">
     <div class="ui-g">
 
       <div class="ui-g-12">
@@ -7,52 +7,52 @@
       </div>
 
       <div class="ui-g-12">
-        <p-selectButton [options]="tipos" #tipo></p-selectButton>
+        <p-selectButton [options]="tipos" #tipo name="tipo" [(ngModel)]="lancamento.tipo"></p-selectButton>
       </div>
 
       <div class="ui-g-12 ui-md-3 ui-fluid">
         <label>Vencimento</label>
-        <p-calendar dateFormat="dd/mm/yy" showIcon="true" name="vencimento" ngModel #vencimento="ngModel" required></p-calendar>
+        <p-calendar dateFormat="dd/mm/yy" showIcon="true" name="vencimento" [(ngModel)]="lancamento.dataVencimento" #vencimento="ngModel" required></p-calendar>
         <app-message [control]="vencimento" text="Informe o vencimento" error="required"></app-message>
       </div>
 
       <div class="ui-g-12 ui-md-3 ui-fluid">
         <label>{{ tipo.value === 'RECEITA' ? 'Recebimento' : 'Pagamento' }}</label>
-        <p-calendar dateFormat="dd/mm/yy" showIcon="true"></p-calendar>
+        <p-calendar dateFormat="dd/mm/yy" showIcon="true" name="pagamento" [(ngModel)]="lancamento.dataPagamento"></p-calendar>
       </div>
 
       <div class="ui-g-12 ui-md-9 ui-fluid">
         <label>Descricao</label>
         <input pInputText type="text" name="descricao" ngModel #descricao="ngModel"
-        required minlength="5">
+        required minlength="5" [(ngModel)]="lancamento.descricao">
         <app-message [control]="descricao" error="required" text="Informe uma descricao."></app-message>
         <app-message [control]="descricao" error="minlength" text="Minimo {{ descricao.errors?.minlength?.requiredLength }} caracteres."></app-message>
       </div>
 
       <div class="ui-g-12 ui-md-3 ui-fluid">
         <label>Valor</label>
-        <input pInputText type="text" name="valor" ngModel #valor="ngModel"
+        <input pInputText type="text" name="valor" [(ngModel)]="lancamento.valor" #valor="ngModel"
           placeholder="0,00" currencyMask [options]="{ prefix: '', thousands: '.', decimal: ',', allowNegative: false}">
         <app-message [control]="valor" text="Informe o valor" error="required"></app-message>
       </div>
 
       <div class="ui-g-12 ui-md-6 ui-fluid">
         <label>Categoria</label>
-        <p-dropdown name="categoria" ngModel #categoria="ngModel" required
+        <p-dropdown name="categoria" [(ngModel)]="lancamento.categoria" #categoria="ngModel" required
         [options]="categorias" [autoWidth]="false" [filter]="true" [placeholder]="'Selecione'"></p-dropdown>
         <app-message [control]="categoria" text="Informe a categoria" error="required"></app-message>
       </div>
 
       <div class="ui-g-12 ui-md-6 ui-fluid">
         <label>Pessoa</label>
-        <p-dropdown name="pessoa" ngModel #pessoa="ngModel" required
+        <p-dropdown name="pessoa" [(ngModel)]="lancamento.pessoa" #pessoa="ngModel" required
           [options]="pessoas" [autoWidth]="false" [filter]="true" [placeholder]="'Selecione'"></p-dropdown>
         <app-message [control]="pessoa" text="Informe a pessoa" error="required"></app-message>
       </div>
 
       <div class="ui-g-12 ui-fluid">
         <label>Observacao</label>
-        <textarea pInputTextarea rows="3"></textarea>
+        <textarea pInputTextarea rows="3" name="observacao" [(ngModel)]="lancamento.observacao"></textarea>
       </div>
 
       <div class="ui-g-12">
