Implementado Cadastro de Pessoas.

--- a/src/app/lancamentos/lancamento-cadastro/lancamento-cadastro.component.html
+++ b/src/app/lancamentos/lancamento-cadastro/lancamento-cadastro.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <form #f="ngForm" #lancamentoForm="ngForm" (ngSubmit)="salvar(f)">
+  <form #lancamentoForm="ngForm" (ngSubmit)="salvar(lancamentoForm)">
     <div class="ui-g">
 
       <div class="ui-g-12">
