--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,5 @@
 <app-navbar></app-navbar>
-<app-pessoa-cadastro></app-pessoa-cadastro>
-
-<!--
-  <app-lancamentos-pesquisa></app-lancamentos-pesquisa>
-  <app-lancamento-cadastro></app-lancamento-cadastro>
-  <app-pessoas-pesquisa></app-pessoas-pesquisa>
--->
+<router-outlet></router-outlet>
 
 <ng2-toasty></ng2-toasty>
 <p-confirmDialog header="Confirmacao" icon="fa fa-question-circle" #confirmacao>
