--- a/src/app/lancamentos/lancamentos-pesquisa/lancamentos-pesquisa.component.html
+++ b/src/app/lancamentos/lancamentos-pesquisa/lancamentos-pesquisa.component.html
@@ -68,7 +68,7 @@
   </div>
 
   <div class="ui-g-12">
-    <a pButton label="Novo Lancamento"></a>
+    <a pButton routerLink="/lancamentos/novo" label="Novo Lancamento"></a>
   </div>
 
 </div>
