--- a/src/app/lancamentos/lancamento-cadastro/lancamento-cadastro.component.html
+++ b/src/app/lancamentos/lancamento-cadastro/lancamento-cadastro.component.html
@@ -57,7 +57,8 @@
 
       <div class="ui-g-12">
         <button pButton type="submit" label="Salvar" [disabled]="!lancamentoForm.valid"></button>
-        <button pButton type="button" label="Novo" class="ui-button-info"></button>
+        <button pButton type="button" label="Novo" class="ui-button-info"
+        (click)="novo(lancamentoForm)"></button>
         <a routerLink="/lancamentos">Voltar para a pesquisa</a>
       </div>
 
