Ajustando Funcionalidades do componente Pessoas.
1. Ajustes de Rotas
2. Ajuste de Edicao
3. Ajuste botao novo
4. Implementacao de metodos de buscar por codigo e atualizar no service.

--- a/src/app/pessoas/pessoa-cadastro/pessoa-cadastro.component.html
+++ b/src/app/pessoas/pessoa-cadastro/pessoa-cadastro.component.html
@@ -3,7 +3,7 @@
     <div class="ui-g">
 
       <div class="ui-g-12">
-        <h1>Nova Pessoa</h1>
+        <h1>{{ editando ? 'Editando ' : 'Nova '}} Pessoa</h1>
       </div>
 
       <div class="ui-g-12 ui-fluid">
@@ -56,8 +56,8 @@
 
       <div class="ui-g-12">
         <button pButton type="submit" label="Salvar"></button>
-        <button pButton type="button" label="Novo"></button>
-        <a href="javascript:;">Voltar para a pesquisa</a>
+        <button pButton (click)="novo(pessoaForm)" type="button" label="Novo"></button>
+        <a routerLink="/pessoas">Voltar para a pesquisa</a>
       </div>
 
     </div>
